--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700,900" rel="stylesheet">
 
     <title>Elegance - Creative HTML5 Template</title>
+    
+   
 <!--
 Elegance Template
 https://templatemo.com/tm-528-elegance
@@ -80,6 +82,7 @@ https://templatemo.com/tm-528-elegance
                         <span class="welcome-first animate" data-animate="fadeInUp">Hello, welcome to</span>
                         <h1 class="welcome-title animate" data-animate="fadeInUp">My Portfolio</h1>
                         <p class="animate" data-animate="fadeInUp">Welcome to my portfolio website showcasing my expertise in Angular and React! Here you can find a collection of my latest projects and learn more about my skills and experience in front-end development.</p>
+                        <a href="images/resume.pdf" target="_blank" class="btn">Download CV</a>
                         <div class="scroll-down next-section animate data-animate="fadeInUp""><img src="images/mouse-scroll.png" alt=""><span>Scroll Down</span></div>
                     </div>
                 </div>
