--- a/index.html
+++ b/index.html
@@ -323,36 +323,39 @@ https://templatemo.com/tm-528-elegance
                                 <h2>what i’ve done?</h2>
                             </div>
                             <div class="gallery-section">
-                                <div class="row">
+                                <div class="row mt-3">
 
                                     <h3 style="text-align: left;">1. iSync ERP (School ERP)</h3>
                                     <div class="col-lg-6 col-sm-12">
-                                        
+
                                         <img src="images/erp3.png" class="card-img-top" alt="...">
 
                                     </div>
                                     <div class="col-lg-6 col-sm-12">
-                                        <p>A Next Generation School Management System application made from scratch Frontend plus Backend with auth module, dynamic fee module, receipt module, configurable branches, user management, Single click deployment and Academic year management.
-                                            </p>
+                                        <p>A Next Generation School Management System application made from scratch
+                                            Frontend plus Backend with auth module, dynamic fee module, receipt module,
+                                            configurable branches, user management, Single click deployment and Academic
+                                            year management.
+                                        </p>
 
-                                            <a class="btn btn-primary" href="https://isyncerp.com/new_isync">Visit Page</a>
+                                        <a class="btn btn-primary" href="https://isyncerp.com/new_isync">Visit Page</a>
 
                                     </div>
                                 </div>
 
-                                <div class="row">
+                                <div class="row mt-3">
                                     <h3 style="text-align: right;">2. iSYNC Tutor (School App)</h3>
 
                                     <div class="col-lg-6 col-sm-12">
-                                        <p>Hello, my name is Ashay Sawarkar and I am a front-end developer with
-                                            expertise in React and Angular. Over the course of my career, I have worked
-                                            on various projects, leveraging my skills to create exceptional user
-                                            experiences. I am excited to share my portfolio with you, showcasing some of
-                                            the projects I have worked on and the results I have achieved. Let's explore
-                                            the possibilities together!</p>
-                                            <a class='btn btn-primary' href="images/appisync">Download apk</a>
+                                        <p>The app is made on REACTjs which includes features such as fees, attendance, and homework management
+                                            for students, and other relevant tools for teachers. The app is designed to
+                                            make it easier for users to manage their school-related tasks and
+                                            responsibilities in an organized and efficient manner. Overall, this app
+                                            aims to streamline school management processes and improve communication
+                                            between students, teachers, and school administrators.</p>
+                                        <a class='btn btn-primary' href="images/appisync">Download apk</a>
 
-                                            
+
                                     </div>
 
                                     <div class="col-lg-6 col-sm-12">
@@ -363,6 +366,23 @@ https://templatemo.com/tm-528-elegance
                                     </div>
                                 </div>
 
+                                <div class="row mt-3">
+
+                                    <h3 style="text-align: left;">3. Warehouse Management</h3>
+                                    <div class="col-lg-6 col-sm-12">
+
+                                        <img src="images/warehouse.png" class="card-img-top" alt="...">
+
+                                    </div>
+                                    <div class="col-lg-6 col-sm-12">
+                                        <p>Led the successful implementation of a cutting-edge warehouse management software, streamlining inventory management and revolutionizing the sales and purchase process. Effectively managed warehouse operations, including product management and tracking of logs , resulting in optimized productivity and enhanced profitability
+                                           <!-- <a href="https://green-multifit.cloudidesys.com/dashboard">WEB URL</a> -->
+                                        </p>
+
+                                        <a class="btn btn-primary" href="https://green-multifit.cloudidesys.com/dashboard">Visit Page</a>
+
+                                    </div>
+                                </div>
                                 <!-- <div class="gallery-list owl-carousel">
                                     <div class="item animate" data-animate="fadeInUp">
                                         <div class="portfolio-item">
