--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@ https://templatemo.com/tm-528-elegance
                                             responsibilities in an organized and efficient manner. Overall, this app
                                             aims to streamline school management processes and improve communication
                                             between students, teachers, and school administrators.</p>
-                                        <a class='btn btn-primary' href="images/appisync">Download apk</a>
+                                        <a class='btn btn-primary' href="https://drive.google.com/file/d/1R2MmCNzGs3NpcaXoseGrYX3jQEQuSRuH/view?usp=share_link" download>Download apk</a>
 
 
                                     </div>
