--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@ https://templatemo.com/tm-528-elegance
                                            <!-- <a href="https://green-multifit.cloudidesys.com/dashboard">WEB URL</a> -->
                                         </p>
 
-                                        <a class="btn btn-primary" href="https://green-multifit.cloudidesys.com/dashboard">Visit Page</a>
+                                        <a class="btn btn-primary" href="https://green-multifit.cloudidesys.com">Visit Page</a>
 
                                     </div>
                                 </div>
