--- a/index.html
+++ b/index.html
@@ -577,6 +577,7 @@ https://templatemo.com/tm-528-elegance
         <div id="social-icons">
             <div class="text-right">
                 <ul class="social-icons">
+                    <li><a href="https://github.com/Ashay10" title="Github"><i class="fa fa-github"></i></a></li>
                     <li><a href="#" title="Twitter"><i class="fa fa-twitter"></i></a></li>
                     <li><a href="https://www.linkedin.com/in/ashay-sawarkar-8176811b5" title="Linkedin"><i
                                 class="fa fa-linkedin"></i></a></li>
