--- a/index.html
+++ b/index.html
@@ -577,9 +577,9 @@ https://templatemo.com/tm-528-elegance
         <div id="social-icons">
             <div class="text-right">
                 <ul class="social-icons">
-                    <li><a href="https://github.com/Ashay10" title="Github"><i class="fa fa-github"></i></a></li>
-                    <li><a href="#" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/ashay-sawarkar-8176811b5" title="Linkedin"><i
+                    <li><a href="https://github.com/Ashay10" target="_blank" title="Github"><i class="fa fa-github"></i></a></li>
+                    <li><a href="#" title="Twitter" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/ashay-sawarkar-8176811b5" title="Linkedin" target="_blank"><i
                                 class="fa fa-linkedin"></i></a></li>
 
                 </ul>
